style final page, make cards align in a grid, make paragraph align better. Fix timer to countdown from 1 minute

--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -3,6 +3,9 @@
   background-image: linear-gradient(to bottom right, #39adb7, #18184c);
   height: 100vh;
   width: 100vw;
+  &--finalpage {
+    height: 97vh;
+  }
   &__content {
     display: flex;
     justify-content: center;
@@ -12,8 +15,8 @@
   }
   &__title {
     @include text-lg;
-    font-weight: $font-weight--bold;
     color: $color--white;
+    font-weight: $font-weight--bold;
     margin-bottom: 5rem;
   }
   &__subtitle {
