--- a/src/components/Results/Results.scss
+++ b/src/components/Results/Results.scss
@@ -1,29 +1,38 @@
 @import '../../sass/utils/variables';
 .results {
+  align-items: flex-start;
   display: flex;
   justify-content: space-around;
-  margin-top: 15rem;
   margin-bottom: 10rem;
+  margin-top: 15rem;
 
   &__paragraph {
+    @include text-sm;
+    display: flex;
+    justify-content: center;
     max-width: 30%;
   }
 
   &__items {
-    display: flex;
     align-items: flex-end;
-    max-width: 30%;
+    display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    max-width: 30%;
   }
 
   &__answer {
-    display: flex;
-    justify-content: center;
-    background-color: $color--coral;
-    height: 7rem;
     align-items: center;
+    background-color: $color--coral;
     border-radius: 8px;
+    display: flex;
+    height: 7rem;
+    justify-content: center;
     margin-bottom: -1.5rem;
+  }
+
+  &__words {
+    margin-left: 1rem;
+    margin-top: 1rem;
   }
 }
